--- a/index.html
+++ b/index.html
@@ -34,13 +34,8 @@
       <div class="top-bar bg-dark text-white">
         <div class="container">
           <div class="row">
-            <div class="col-lg-4 bg-primary py-2 text-center text-lg-left">
-              <p class="mb-0 text-small"><i class="fas fa-clock mr-2"></i>Opening hours: Mon - Sat 9:00 - 18:00</p>
-            </div>
             <div class="col-lg-8 text-right py-2 text-center text-lg-right">
               <ul class="list-inline mb-0">
-                <li class="list-inline-item"><a class="font-weight-normal text-small reset-anchor" href="#"><i class="fas fa-mobile mr-2"></i>+535 421 895 6523</a></li>
-                <li class="list-inline-item">|</li>
                 <li class="list-inline-item"><a class="font-weight-normal text-small reset-anchor" href="#"><i class="fas fa-envelope mr-2"></i>Construction@example.com</a></li>
               </ul>
             </div>
@@ -58,7 +53,7 @@
               <li class="nav-item ml-2 dropdown"><a class="nav-link text-uppercase dropdown-toggle pr-0" id="navbarDropdownMenuLink" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
                 <div class="dropdown-menu mt-lg-4" aria-labelledby="navbarDropdownMenuLink"><a class="dropdown-item font-weight-bold text-small" href="index.html">Home</a><a class="dropdown-item font-weight-bold text-small" href="about.html">About</a><a class="dropdown-item font-weight-bold text-small" href="contact.html">Contact                </a></div>
               </li>
-              <li class="nav-item ml-lg-3 pl-lg-3"><a class="btn btn-outline-primary btn-sm" href="contact.html">Request a quote</a></li>
+              <li class="nav-item ml-lg-3 pl-lg-3"><a class="btn btn-outline-primary btn-sm" href="https://docs.google.com/forms/d/e/1FAIpQLScM8YYaHCUfUE2aLrftjADLtzIeQ3DShGOFiTXzsVOfvwE2aQ/viewform" target = "_blank">Apply</a></li>
             </ul>
           </div>
         </div>
@@ -227,7 +222,7 @@
                 <h2 class="text-white mb-2">You Always Get the Best Guidance</h2>
                 <p class="text-white mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               </div>
-              <div class="col-lg-3 ml-auto text-center text-lg-right"><a class="btn btn-outline-light" href="#">Request a quote</a></div>
+              <div class="col-lg-3 ml-auto text-center text-lg-right"><a class="btn btn-outline-light" href="#">Apply</a></div>
             </div>
           </div>
         </div>
@@ -410,8 +405,6 @@
             <div class="col-lg-4 col-md-6"><img class="mb-4" src="img/logo-white.svg" alt="" width="200">
               <p class="text-muted text-small mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
               <p class="mb-1"><i class="fas fa-envelope mr-3 text-primary fa-fw"></i><span class="text-small text-muted">Construction@example.com</span></p>
-              <p class="mb-1"><i class="fas fa-mobile mr-3 text-primary fa-fw"></i><span class="text-small text-muted">+535 421 895 6523</span></p>
-              <p class="mb-1"><i class="fas fa-map-marker-alt mr-3 text-primary fa-fw"></i><span class="text-small text-muted">1798 Pretty View Lane, California</span></p>
             </div>
             <div class="col-lg-2 col-md-6">
               <h5 class="mt-3 mb-4 font-weight-normal">Quick links</h5>
