--- a/about.html
+++ b/about.html
@@ -52,9 +52,7 @@
             <ul class="navbar-nav ml-auto">
               <li class="nav-item mx-2 active"><a class="nav-link text-uppercase" href="index.html">Home </a></li>
               <li class="nav-item mx-2"><a class="nav-link text-uppercase" href="about.html">About</a></li>
-              <li class="nav-item mx-2"><a class="nav-link text-uppercase" href="contact.html">Contact</a></li>
-              <li class="nav-item ml-2 dropdown"><a class="nav-link text-uppercase dropdown-toggle pr-0" id="navbarDropdownMenuLink" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
-                <div class="dropdown-menu mt-lg-4" aria-labelledby="navbarDropdownMenuLink"><a class="dropdown-item font-weight-bold text-small" href="index.html">Home</a><a class="dropdown-item font-weight-bold text-small" href="about.html">About</a><a class="dropdown-item font-weight-bold text-small" href="contact.html">Contact                </a></div>
+                <div class="dropdown-menu mt-lg-4" aria-labelledby="navbarDropdownMenuLink"><a class="dropdown-item font-weight-bold text-small" href="index.html">Home</a><a class="dropdown-item font-weight-bold text-small" href="about.html">About</a></div>
               </li>
               <li class="nav-item ml-lg-3 pl-lg-3"><a class="btn btn-outline-primary btn-sm" href="https://docs.google.com/forms/d/e/1FAIpQLScM8YYaHCUfUE2aLrftjADLtzIeQ3DShGOFiTXzsVOfvwE2aQ/viewform" target = "_blank">Apply</a></li>
             </ul>
@@ -287,7 +285,6 @@
                 <li class="mb-2"><a class="footer-link" href="#">About</a></li>
                 <li class="mb-2"><a class="footer-link" href="#">Services</a></li>
                 <li class="mb-2"><a class="footer-link" href="#">Contacts</a></li>
-                <li class="mb-2"><a class="footer-link" href="#">Pages</a></li>
               </ul>
             </div>
             <div class="col-lg-2 col-md-6">
