--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="row">
             <div class="col-lg-8 text-right py-2 text-center text-lg-right">
               <ul class="list-inline mb-0">
-                <li class="list-inline-item"><a class="font-weight-normal text-small reset-anchor" href="#"><i class="fas fa-envelope mr-2"></i>Construction@example.com</a></li>
+                <li class="list-inline-item"><a class="font-weight-normal text-small reset-anchor" href="#"><i class="fas fa-envelope mr-2"></i>hcs-board@hcs.harvard.edu</a></li>
               </ul>
             </div>
           </div>
@@ -49,8 +49,6 @@
             <ul class="navbar-nav ml-auto">
               <li class="nav-item mx-2 active"><a class="nav-link text-uppercase" href="index.html">Home </a></li>
               <li class="nav-item mx-2"><a class="nav-link text-uppercase" href="about.html">About</a></li>
-              <li class="nav-item mx-2"><a class="nav-link text-uppercase" href="contact.html">Contact</a></li>
-              <li class="nav-item ml-2 dropdown"><a class="nav-link text-uppercase dropdown-toggle pr-0" id="navbarDropdownMenuLink" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
                 <div class="dropdown-menu mt-lg-4" aria-labelledby="navbarDropdownMenuLink"><a class="dropdown-item font-weight-bold text-small" href="index.html">Home</a><a class="dropdown-item font-weight-bold text-small" href="about.html">About</a><a class="dropdown-item font-weight-bold text-small" href="contact.html">Contact                </a></div>
               </li>
               <li class="nav-item ml-lg-3 pl-lg-3"><a class="btn btn-outline-primary btn-sm" href="https://docs.google.com/forms/d/e/1FAIpQLScM8YYaHCUfUE2aLrftjADLtzIeQ3DShGOFiTXzsVOfvwE2aQ/viewform" target = "_blank">Apply</a></li>
@@ -67,11 +65,11 @@
           <div class="container text-white py-5 index-forward">
             <div class="row">
               <div class="col-lg-7">
-                <h1>Choose right solution for your business</h1>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+                <h1>Take your idea to the next level</h1>
+                <p class="lead">Applications open for the 2021 Builders Incubation Program!</p>
                 <ul class="list-inline">
-                  <li class="list-inline-item"><a class="btn btn-primary" href="#">Read More</a></li>
-                  <li class="list-inline-item"><a class="btn btn-outline-light" href="#">Our company</a></li>
+                  <li class="list-inline-item"><a class="btn btn-primary" href="#">Apply</a></li>
+                  <li class="list-inline-item"><a class="btn btn-outline-light" href="#">Learn More</a></li>
                 </ul>
               </div>
             </div>
@@ -374,28 +372,28 @@
           <div class="row">
             <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
               <div class="d-flex align-items-center">
-                <h6 class="h1 mb-0">705</h6>
-                <p class="ml-3 flex-grow-1 text-uppercase mb-0">Projects completed</p>
+                <h6 class="h1 mb-0">21</h6>
+                <p class="ml-3 flex-grow-1 text-uppercase mb-0">Teams</p>
               </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
               <div class="d-flex align-items-center">
-                <h6 class="h1 mb-0">809</h6>
-                <p class="ml-3 flex-grow-1 text-uppercase mb-0">Satisfied customers</p>
+                <h6 class="h1 mb-0">$5000</h6>
+                <p class="ml-3 flex-grow-1 text-uppercase mb-0">Equity-Free Grants</p>
               </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
               <div class="d-flex align-items-center">
-                <h6 class="h1 mb-0">354</h6>
-                <p class="ml-3 flex-grow-1 text-uppercase mb-0">Awards recieved</p>
+                <h6 class="h1 mb-0">8</h6>
+                <p class="ml-3 flex-grow-1 text-uppercase mb-0">Weeks</p>
               </div>
             </div>
-            <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+            <!-- <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
               <div class="d-flex align-items-center">
                 <h6 class="h1 mb-0">35</h6>
                 <p class="ml-3 flex-grow-1 text-uppercase mb-0">Years of experience</p>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -404,7 +402,7 @@
           <div class="row py-5">
             <div class="col-lg-4 col-md-6"><img class="mb-4" src="img/logo-white.svg" alt="" width="200">
               <p class="text-muted text-small mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-              <p class="mb-1"><i class="fas fa-envelope mr-3 text-primary fa-fw"></i><span class="text-small text-muted">Construction@example.com</span></p>
+              <p class="mb-1"><i class="fas fa-envelope mr-3 text-primary fa-fw"></i><span class="text-small text-muted">hcs-board@hcs.harvard.edu</span></p>
             </div>
             <div class="col-lg-2 col-md-6">
               <h5 class="mt-3 mb-4 font-weight-normal">Quick links</h5>
@@ -413,7 +411,6 @@
                 <li class="mb-2"><a class="footer-link" href="#">About</a></li>
                 <li class="mb-2"><a class="footer-link" href="#">Services</a></li>
                 <li class="mb-2"><a class="footer-link" href="#">Contacts</a></li>
-                <li class="mb-2"><a class="footer-link" href="#">Pages</a></li>
               </ul>
             </div>
             <div class="col-lg-2 col-md-6">
