--- a/about.html
+++ b/about.html
@@ -50,8 +50,8 @@
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item mx-2 active"><a class="nav-link text-uppercase" href="index.html">Home </a></li>
-              <li class="nav-item mx-2"><a class="nav-link text-uppercase" href="about.html">About</a></li>
+              <li class="nav-item mx-2"><a class="nav-link text-uppercase" href="index.html">Home </a></li>
+              <li class="nav-item mx-2 active"><a class="nav-link text-uppercase" href="about.html">About</a></li>
                 <div class="dropdown-menu mt-lg-4" aria-labelledby="navbarDropdownMenuLink"><a class="dropdown-item font-weight-bold text-small" href="index.html">Home</a><a class="dropdown-item font-weight-bold text-small" href="about.html">About</a></div>
               </li>
               <li class="nav-item ml-lg-3 pl-lg-3"><a class="btn btn-outline-primary btn-sm" href="https://docs.google.com/forms/d/e/1FAIpQLScM8YYaHCUfUE2aLrftjADLtzIeQ3DShGOFiTXzsVOfvwE2aQ/viewform" target = "_blank">Apply</a></li>
