--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
       <div class="top-bar bg-dark text-white">
         <div class="container">
           <div class="row">
+            <div class="col-lg-4 bg-primary py-2 text-center text-lg-left">
+            </div>
             <div class="col-lg-8 text-right py-2 text-center text-lg-right">
               <ul class="list-inline mb-0">
+                <li class="list-inline-item">|</li>
                 <li class="list-inline-item"><a class="font-weight-normal text-small reset-anchor" href="#"><i class="fas fa-envelope mr-2"></i>hcs-board@hcs.harvard.edu</a></li>
               </ul>
             </div>
@@ -61,14 +64,14 @@
     <section>
       <div class="owl-carousel owl-theme-default hero-slider owl-nav-custom">
         <!-- Hero Slide-->
-        <div class="hero-slide bg-size bg-center py-5" style="background: url(img/hero-banner-1.jpg)">
+        <div class="hero-slide bg-size bg-center py-5" style="background: url(img/maroon-banner.jpeg)">
           <div class="container text-white py-5 index-forward">
             <div class="row">
               <div class="col-lg-7">
                 <h1>Take your idea to the next level</h1>
                 <p class="lead">Applications open for the 2021 Builders Incubation Program!</p>
                 <ul class="list-inline">
-                  <li class="list-inline-item"><a class="btn btn-primary" href="#">Apply</a></li>
+                  <li class="list-inline-item"><a class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLScM8YYaHCUfUE2aLrftjADLtzIeQ3DShGOFiTXzsVOfvwE2aQ/viewform" target = "_blank">Apply</a></li>
                   <li class="list-inline-item"><a class="btn btn-outline-light" href="#">Learn More</a></li>
                 </ul>
               </div>
@@ -112,18 +115,16 @@
       <div class="container py-5">
         <div class="row">
           <div class="col-lg-6 order-2 order-lg-1">
-            <p class="h6 mb-1 text-uppercase text-primary mb-3">Our main features</p>
-            <h2 class="mb-4">We Work With You To Address Your Most Critical Business Priorities</h2>
-            <p class="text-small text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p class="h6 mb-1 text-uppercase text-primary mb-3">Our Program</p>
+            <h2 class="mb-4">We Support Builders and Entrepreneurs in Our Campus Tech Community </h2>
+            <p class="text-small text-muted">The Builders Incubation Program (BIP) is an 8-week remote summer program that gives students access to the following resources </p>
             <ul class="list-check list-unstyled row px-3 mb-4">
-              <li class="text-small text-muted col-lg-6 mb-2">Acquire live chat enables sales</li>
-              <li class="text-small text-muted col-lg-6 mb-2">Learn from customer feedback</li>
-              <li class="text-small text-muted col-lg-6 mb-2">Engage - marketing automation</li>
-              <li class="text-small text-muted col-lg-6 mb-2">Support -customer support</li>
-              <li class="text-small text-muted col-lg-6 mb-2">Acquire live chat enables sales</li>
-              <li class="text-small text-muted col-lg-6 mb-2">Learn from customer feedback</li>
+              <li class="text-small text-muted col-lg-6 mb-2">$100 to $5,000 in equity free grants</li>
+              <li class="text-small text-muted col-lg-6 mb-2">1-on-1 mentorship from our product, engineering, design, and investor networks</li>
+              <li class="text-small text-muted col-lg-6 mb-2">Access to connections with VCs and angel investors</li>
+              <li class="text-small text-muted col-lg-6 mb-2">Weekly workshops and programming</li>
             </ul>
-            <ul class="list-inline py-4 border-top border-bottom d-flex align-items-center">
+            <!-- <ul class="list-inline py-4 border-top border-bottom d-flex align-items-center">
               <li class="list-inline-item pr-4 mr-0"><img src="img/about-sign.png" alt="" width="80"></li>
               <li class="list-inline-item px-4 mr-0 border-left">
                 <h5 class="mb-0">Jack Foxx</h5>
@@ -133,10 +134,40 @@
                 <h5 class="mb-0">+420 754 6545 6564</h5>
                 <p class="small font-weight-normal text-muted mb-0">Call to ask any question</p>
               </li>
-            </ul>
+            </ul> -->
           </div>
           <div class="col-lg-5 ml-auto mb-4 mb-lg-0 order-1 order-lg-2">
             <div class="p-2 border"><img class="img-fluid" src="img/about-img.jpg" alt=""></div>
+          </div>
+        </div>
+      </div>
+      <div class="bg-primary py-5 text-white">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+              <div class="d-flex align-items-center">
+                <h6 class="h1 mb-0">21</h6>
+                <p class="ml-3 flex-grow-1 text-uppercase mb-0">Teams</p>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+              <div class="d-flex align-items-center">
+                <h6 class="h1 mb-0">$5000</h6>
+                <p class="ml-3 flex-grow-1 text-uppercase mb-0">Equity-Free Grants</p>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+              <div class="d-flex align-items-center">
+                <h6 class="h1 mb-0">8</h6>
+                <p class="ml-3 flex-grow-1 text-uppercase mb-0">Weeks</p>
+              </div>
+            </div>
+            <!-- <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+              <div class="d-flex align-items-center">
+                <h6 class="h1 mb-0">35</h6>
+                <p class="ml-3 flex-grow-1 text-uppercase mb-0">Years of experience</p>
+              </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -367,42 +398,12 @@
       </div>
     </section>
     <footer class="bg-dark">
-      <div class="bg-primary py-5 text-white">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-              <div class="d-flex align-items-center">
-                <h6 class="h1 mb-0">21</h6>
-                <p class="ml-3 flex-grow-1 text-uppercase mb-0">Teams</p>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-              <div class="d-flex align-items-center">
-                <h6 class="h1 mb-0">$5000</h6>
-                <p class="ml-3 flex-grow-1 text-uppercase mb-0">Equity-Free Grants</p>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-              <div class="d-flex align-items-center">
-                <h6 class="h1 mb-0">8</h6>
-                <p class="ml-3 flex-grow-1 text-uppercase mb-0">Weeks</p>
-              </div>
-            </div>
-            <!-- <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-              <div class="d-flex align-items-center">
-                <h6 class="h1 mb-0">35</h6>
-                <p class="ml-3 flex-grow-1 text-uppercase mb-0">Years of experience</p>
-              </div>
-            </div> -->
-          </div>
-        </div>
-      </div>
       <div class="bg-dark py-5 text-white">
         <div class="container">
           <div class="row py-5">
             <div class="col-lg-4 col-md-6"><img class="mb-4" src="img/logo-white.svg" alt="" width="200">
               <p class="text-muted text-small mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-              <p class="mb-1"><i class="fas fa-envelope mr-3 text-primary fa-fw"></i><span class="text-small text-muted">hcs-board@hcs.harvard.edu</span></p>
+              <p class="mb-1"><i class="fas fa-envelope mr-3 text-primary fa-fw"></i><span class="text-small text-muted">rakesh@hcs.harvard.edu</span></p>
             </div>
             <div class="col-lg-2 col-md-6">
               <h5 class="mt-3 mb-4 font-weight-normal">Quick links</h5>
