home page changes

--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
       </nav>
     </header>
     <!-- Hero Slider -->
-    <section class="hero bg-cover bg-position py-4" style="background: url(img/hero-banner-1.jpg)">
+    <section class="hero bg-cover bg-position py-4" style="background: url(img/maroon-banner.jpeg)">
       <div class="container py-5 index-forward text-white">
         <h1>About Us</h1>
         <!-- Breadcrumb-->
