--- a/index.html
+++ b/index.html
@@ -137,36 +137,36 @@
             </ul> -->
           </div>
           <div class="col-lg-5 ml-auto mb-4 mb-lg-0 order-1 order-lg-2">
-            <div class="p-2 border"><img class="img-fluid" src="img/about-img.jpg" alt=""></div>
+            <div class="p-2 border"><img class="img-fluid" src="img/zoom1.jpg" alt=""></div>
           </div>
         </div>
       </div>
       <div class="bg-primary py-5 text-white">
         <div class="container">
           <div class="row">
-            <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+            <div class="col-sm-4 mb-4 mb-lg-0">
               <div class="d-flex align-items-center">
                 <h6 class="h1 mb-0">21</h6>
                 <p class="ml-3 flex-grow-1 text-uppercase mb-0">Teams</p>
               </div>
             </div>
-            <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-              <div class="d-flex align-items-center">
-                <h6 class="h1 mb-0">$5000</h6>
-                <p class="ml-3 flex-grow-1 text-uppercase mb-0">Equity-Free Grants</p>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+            
+            <div class="col-sm-4 mb-4 mb-lg-0">
               <div class="d-flex align-items-center">
                 <h6 class="h1 mb-0">8</h6>
                 <p class="ml-3 flex-grow-1 text-uppercase mb-0">Weeks</p>
               </div>
             </div>
+            <div class="col-sm-4 mb-4 mb-lg-0">
+              <div class="d-flex align-items-center">
+                <h6 class="h1 mb-0">$5000</h6>
+                <p class="ml-3 flex-grow-1 text-uppercase mb-0">In Equity-Free Grants</p>
+              </div>
+            </div>
             <!-- <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
               <div class="d-flex align-items-center">
-                <h6 class="h1 mb-0">35</h6>
-                <p class="ml-3 flex-grow-1 text-uppercase mb-0">Years of experience</p>
-              </div>
+                <h6 class="h1 mb-0">2020</h6>
+                <p class="ml-3 flex-grow-1 text-uppercase mb-0">Program</p>
             </div> -->
           </div>
         </div>
@@ -179,7 +179,7 @@
           <div class="row">
             <div class="col-lg-7 mx-auto">
               <p class="h6 text-uppercase text-primary mb-0">Our services</p>
-              <h2>We Creating Solutions For Your Organization</h2>
+              <h2>Featured Projects from 2020 Program</h2>
             </div>
           </div>
         </header>
@@ -189,7 +189,7 @@
               <svg class="svg-icon mb-4 text-primary svg-icon-light svg-icon-big">
                 <use xlink:href="#laptop-screen-1"> </use>
               </svg>
-              <h3 class="h5">Business Finance Strategy</h3>
+              <h3 class="h5">Finary</h3>
               <p class="text-small mb-0 text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
             </div>
           </div>
@@ -198,7 +198,7 @@
               <svg class="svg-icon mb-4 text-primary svg-icon-light svg-icon-big">
                 <use xlink:href="#quality-1"> </use>
               </svg>
-              <h3 class="h5">Portfolio &amp; Resource Allocation</h3>
+              <h3 class="h5">Congregate</h3>
               <p class="text-small mb-0 text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
             </div>
           </div>
@@ -207,16 +207,16 @@
               <svg class="svg-icon mb-4 text-primary svg-icon-light svg-icon-big">
                 <use xlink:href="#survey-1"> </use>
               </svg>
-              <h3 class="h5">Organization &amp; Decision Process</h3>
+              <h3 class="h5">rem</h3>
               <p class="text-small mb-0 text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 mb-4">
+          <!-- <div class="col-lg-4 col-md-6 mb-4">
             <div class="px-4 py-5 border border-width-md border-dash h-100">
               <svg class="svg-icon mb-4 text-primary svg-icon-light svg-icon-big">
                 <use xlink:href="#pie-chart-1"> </use>
               </svg>
-              <h3 class="h5">Decision &amp; Risk Analytic</h3>
+              <h3 class="h5"></h3>
               <p class="text-small mb-0 text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
             </div>
           </div>
@@ -237,7 +237,7 @@
               <h3 class="h5">Modern &amp; Tribe Workplace</h3>
               <p class="text-small mb-0 text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
