--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Consultive | Bootstrap Template</title>
+    <title>About | Builders Incubation Program</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -38,6 +38,7 @@
             </div>
             <div class="col-lg-8 text-right py-2 text-center text-lg-right">
               <ul class="list-inline mb-0">
+                <li class="list-inline-item">Harvard Computer Society</li>
                 <li class="list-inline-item">|</li>
                 <li class="list-inline-item"><a class="font-weight-normal text-small reset-anchor" href="#"><i class="fas fa-envelope mr-2"></i>hcs-board@hcs.harvard.edu</a></li>
               </ul>
@@ -46,7 +47,7 @@
         </div>
       </div>
       <nav class="navbar navbar-expand-lg navbar-light py-3 bg-white shadow-sm">
-        <div class="container"><a class="navbar-brand" href="index.html"><img src="img/logo.svg" alt="" width="200"></a>
+        <div class="container"><a class="navbar-brand" href="index.html"><img src="img/logo.svg" alt="" width="400"></a>
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
@@ -73,7 +74,7 @@
         </nav>
       </div>
     </section>
-    <section class="py-5">
+    <!-- <section class="py-5">
       <div class="container py-5">
         <div class="row">
           <div class="col-lg-5 mb-4 mb-lg-0">
@@ -105,7 +106,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <section class="py-5 bg-light">
       <div class="container py-5">
         <header class="mb-5 text-center">
@@ -163,7 +164,6 @@
     <section class="py-5">
       <div class="container py-5">
         <h2>Frequently asked questions</h2>
-        <p class="text-muted mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
         <div class="row">
           <div class="col-lg-6 mb-5 mb-lg-0">
             <div class="accordion" id="accordionExample">
@@ -205,7 +205,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6">
+          <!-- <div class="col-lg-6">
             <ul class="list-unstyled">
               <li class="d-flex">
                 <svg class="svg-icon text-primary">
@@ -235,7 +235,7 @@
                 </div>
               </li>
             </ul>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -266,56 +266,6 @@
                 <h6 class="h1 mb-0">35</h6>
                 <p class="ml-3 flex-grow-1 text-uppercase mb-0">Years of experience</p>
               </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="bg-dark py-5 text-white">
-        <div class="container">
-          <div class="row py-5">
-            <div class="col-lg-4 col-md-6"><img class="mb-4" src="img/logo-white.svg" alt="" width="200">
-              <p class="text-muted text-small mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-              <p class="mb-1"><i class="fas fa-envelope mr-3 text-primary fa-fw"></i><span class="text-small text-muted">cynthiachen@college.harvard.edu</span></p>
-              <p class="mb-1"><i class="fas fa-mobile mr-3 text-primary fa-fw"></i><span class="text-small text-muted">+408 </span></p>
-            </div>
-            <div class="col-lg-2 col-md-6">
-              <h5 class="mt-3 mb-4 font-weight-normal">Quick links</h5>
-              <ul class="list-unstyled">
-                <li class="mb-2"><a class="footer-link" href="#">Home</a></li>
-                <li class="mb-2"><a class="footer-link" href="#">About</a></li>
-                <li class="mb-2"><a class="footer-link" href="#">Services</a></li>
-                <li class="mb-2"><a class="footer-link" href="#">Contacts</a></li>
-              </ul>
-            </div>
-            <div class="col-lg-2 col-md-6">
-              <h5 class="mt-3 mb-4 font-weight-normal">Our services</h5>
-              <ul class="list-unstyled">
-                <li class="mb-2"><a class="footer-link" href="#">Make Appointment</a></li>
-                <li class="mb-2"><a class="footer-link" href="#">Customer Services</a></li>
-                <li class="mb-2"><a class="footer-link" href="#">Department Service</a></li>
-                <li class="mb-2"><a class="footer-link" href="#">Our Case Studies</a></li>
-                <li class="mb-2"><a class="footer-link" href="#">Free Consultation</a></li>
-                <li class="mb-2"><a class="footer-link" href="#">Meet Our Experts</a></li>
-              </ul>
-            </div>
-            <div class="col-lg-4 col-md-6">
-              <h5 class="mt-3 mb-4 font-weight-normal">Latest news</h5>
-              <ul class="list-unstyled mb-0">
-                <li class="d-flex mb-4">
-                  <div class="pr-2"><img src="img/blog-thumb-1.jpg" alt="" width="60"></div>
-                  <div class="ml-3">
-                    <p class="small text-muted mb-0">May 01, 2019 </p>
-                    <h6 class="text-light font-weight-normal mb-0">Successful Growth In Business 2018</h6><a class="reset-anchor text-primary text-small" href="#">Read more<i class="fas fa-angle-right ml-2"></i></a>
-                  </div>
-                </li>
-                <li class="d-flex">
-                  <div class="pr-2"><img src="img/blog-thumb-2.jpg" alt="" width="60"></div>
-                  <div class="ml-3">
-                    <p class="small text-muted mb-0">May 01, 2019 </p>
-                    <h6 class="text-light font-weight-normal mb-0">Successful Growth In Business 2018</h6><a class="reset-anchor text-primary text-small" href="#">Read more<i class="fas fa-angle-right ml-2"></i></a>
-                  </div>
-                </li>
-              </ul>
             </div>
           </div>
         </div>
