--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Consultive | Bootstrap Template</title>
+    <title>Builders Incubation Program</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -38,15 +38,16 @@
             </div>
             <div class="col-lg-8 text-right py-2 text-center text-lg-right">
               <ul class="list-inline mb-0">
+                <li class="list-inline-item">Harvard Computer Society</li>
                 <li class="list-inline-item">|</li>
-                <li class="list-inline-item"><a class="font-weight-normal text-small reset-anchor" href="#"><i class="fas fa-envelope mr-2"></i>hcs-board@hcs.harvard.edu</a></li>
+                <li class="list-inline-item"><a class="font-weight-normal text-small reset-anchor"><i class="fas fa-envelope mr-2"></i>hcs-board@hcs.harvard.edu</a></li>
               </ul>
             </div>
           </div>
         </div>
       </div>
       <nav class="navbar navbar-expand-lg navbar-light py-3 bg-white shadow-sm">
-        <div class="container"><a class="navbar-brand" href="index.html"><img src="img/logo.svg" alt="" width="200"></a>
+        <div class="container"><a class="navbar-brand" href="index.html"><img src="img/logo.svg" alt="" width="400"></a>
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
@@ -68,18 +69,18 @@
           <div class="container text-white py-5 index-forward">
             <div class="row">
               <div class="col-lg-7">
-                <h1>Take your idea to the next level</h1>
+                <h1>Want to take your idea to the next level?</h1>
                 <p class="lead">Applications open for the 2021 Builders Incubation Program!</p>
                 <ul class="list-inline">
                   <li class="list-inline-item"><a class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLScM8YYaHCUfUE2aLrftjADLtzIeQ3DShGOFiTXzsVOfvwE2aQ/viewform" target = "_blank">Apply</a></li>
-                  <li class="list-inline-item"><a class="btn btn-outline-light" href="#">Learn More</a></li>
+                  <li class="list-inline-item"><a class="btn btn-outline-light" href="about.html">Learn More</a></li>
                 </ul>
               </div>
             </div>
           </div>
         </div>
         <!-- Hero Slide -->
-        <div class="hero-slide bg-size bg-center py-5" style="background: url(img/hero-banner-2.jpg)">
+        <!-- <div class="hero-slide bg-size bg-center py-5" style="background: url(img/hero-banner-2.jpg)">
           <div class="container text-white py-5 index-forward">
             <div class="row">
               <div class="col-lg-7">
@@ -92,9 +93,9 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
         <!-- Hero Slide -->
-        <div class="hero-slide bg-size bg-center py-5" style="background: url(img/hero-banner-3.jpg)">
+        <!-- <div class="hero-slide bg-size bg-center py-5" style="background: url(img/hero-banner-3.jpg)">
           <div class="container text-white py-5 index-forward">
             <div class="row">
               <div class="col-lg-7">
@@ -107,7 +108,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
     <!-- Features Section -->
@@ -117,12 +118,12 @@
           <div class="col-lg-6 order-2 order-lg-1">
             <p class="h6 mb-1 text-uppercase text-primary mb-3">Our Program</p>
             <h2 class="mb-4">We Support Builders and Entrepreneurs in Our Campus Tech Community </h2>
-            <p class="text-small text-muted">The Builders Incubation Program (BIP) is an 8-week remote summer program that gives students access to the following resources </p>
+            <p class="text-medium text-muted">The Builders Incubation Program (BIP) is an 8-week remote summer program that gives students access to the following resources </p>
             <ul class="list-check list-unstyled row px-3 mb-4">
-              <li class="text-small text-muted col-lg-6 mb-2">$100 to $5,000 in equity free grants</li>
-              <li class="text-small text-muted col-lg-6 mb-2">1-on-1 mentorship from our product, engineering, design, and investor networks</li>
-              <li class="text-small text-muted col-lg-6 mb-2">Access to connections with VCs and angel investors</li>
-              <li class="text-small text-muted col-lg-6 mb-2">Weekly workshops and programming</li>
+              <li class="text-medium text-muted mb-2">$100 to $5,000 in equity free grants</li>
+              <li class="text-medium text-muted mb-2">1-on-1 mentorship from our product, engineering, design, and investor networks</li>
+              <li class="text-medium text-muted mb-2">Access to connections with VCs and angel investors</li>
+              <li class="text-medium text-muted mb-2">Weekly workshops and programming</li>
             </ul>
             <!-- <ul class="list-inline py-4 border-top border-bottom d-flex align-items-center">
               <li class="list-inline-item pr-4 mr-0"><img src="img/about-sign.png" alt="" width="80"></li>
@@ -137,7 +138,8 @@
             </ul> -->
           </div>
           <div class="col-lg-5 ml-auto mb-4 mb-lg-0 order-1 order-lg-2">
-            <div class="p-2 border"><img class="img-fluid" src="img/zoom1.jpg" alt=""></div>
+            <div class="p-2 border"><img class="img-fluid" src="img/zoom1.png" alt=""></div>
+            <p class="text-medium text-muted">Talk with Michael Seibel, CEO of Y Combinator. </p>
           </div>
         </div>
       </div>
@@ -178,37 +180,42 @@
         <header class="mb-5">
           <div class="row">
             <div class="col-lg-7 mx-auto">
-              <p class="h6 text-uppercase text-primary mb-0">Our services</p>
-              <h2>Featured Projects from 2020 Program</h2>
+              <p class="h6 text-uppercase text-primary mb-0">2020 Program</p>
+              <h2>Featured Projects</h2>
             </div>
           </div>
         </header>
         <div class="row align-items-stretch">
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="px-4 py-5 border border-width-md border-dash h-100">
-              <svg class="svg-icon mb-4 text-primary svg-icon-light svg-icon-big">
+              <!-- <svg class="svg-icon mb-4 text-primary svg-icon-light svg-icon-big">
                 <use xlink:href="#laptop-screen-1"> </use>
-              </svg>
+              </svg> -->
+              <img class="img-fluid" width ="130" src="img/finary.jpeg" alt="">
               <h3 class="h5">Finary</h3>
-              <p class="text-small mb-0 text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
+              <p class="text-small mb-0 text-muted">Finary is a social investing platform building group chats for Gen Z. You can chat with friends about your portfolio, discover new investing communities, and make trades with your brokerage.
+              </p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="px-4 py-5 border border-width-md border-dash h-100">
-              <svg class="svg-icon mb-4 text-primary svg-icon-light svg-icon-big">
+              <!-- <svg class="svg-icon mb-4 text-primary svg-icon-light svg-icon-big">
                 <use xlink:href="#quality-1"> </use>
-              </svg>
+              </svg> -->
+              <img class="img-fluid" width ="130" src="img/congregate.jpeg" alt="">
               <h3 class="h5">Congregate</h3>
-              <p class="text-small mb-0 text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
+              <p class="text-small mb-0 text-muted">Congregate is an online events platform that brings the spontaneity of in-person networking events and social gatherings online. Users can seamlessly jump between conversations, hear neighboring conversations, and get matched with attendees of similar interests.
+              </p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="px-4 py-5 border border-width-md border-dash h-100">
-              <svg class="svg-icon mb-4 text-primary svg-icon-light svg-icon-big">
+              <!-- <svg class="svg-icon mb-4 text-primary svg-icon-light svg-icon-big">
                 <use xlink:href="#survey-1"> </use>
-              </svg>
+              </svg> -->
+              <img class="img-fluid" width ="130" src="img/rem.png" alt="">
               <h3 class="h5">rem</h3>
-              <p class="text-small mb-0 text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
+              <p class="text-small mb-0 text-muted">Rem is obsessed with helping our users make an impact on society’s most pressing issues. Our goal is to serve as an all-encompassing digital ecosystem for charitable giving, allowing users to discover new charities, learn more about causes they already care about.</p>
             </div>
           </div>
           <!-- <div class="col-lg-4 col-md-6 mb-4">
@@ -248,17 +255,17 @@
           <div class="container">
             <div class="row align-items-center">
               <div class="col-lg-7 text-center text-lg-left mb-4 mb-lg-0">
-                <h2 class="text-white mb-2">You Always Get the Best Guidance</h2>
-                <p class="text-white mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <h2 class="text-white mb-2">Apply for the 2021 program today!</h2>
+                <p class="text-white mb-0">Applications are due June 8.</p>
               </div>
-              <div class="col-lg-3 ml-auto text-center text-lg-right"><a class="btn btn-outline-light" href="#">Apply</a></div>
+              <div class="col-lg-3 ml-auto text-center text-lg-right"><a class="btn btn-outline-light" href="https://docs.google.com/forms/d/e/1FAIpQLScM8YYaHCUfUE2aLrftjADLtzIeQ3DShGOFiTXzsVOfvwE2aQ/viewform" target = "_blank">Apply</a></div>
             </div>
           </div>
         </div>
       </div>
     </section>
     <!-- Features Section -->
-    <section class="py-5 bg-light">
+    <!-- <section class="py-5 bg-light">
       <div class="container py-5">
         <div class="row align-items-center">
           <div class="col-lg-5 px-lg-0">
@@ -294,9 +301,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- Video Section -->
-    <section class="bg-center bg-cover" style="background: url(img/hero-banner-3.jpg)">
+    <!-- <section class="bg-center bg-cover" style="background: url(img/hero-banner-3.jpg)">
       <div class="dark-overlay py-5">
         <div class="overlay-content text-white">
           <div class="container py-5">
@@ -312,9 +319,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- Testimonials Section-->
-    <section class="py-5">
+    <!-- <section class="py-5">
       <div class="container py-5">
         <p class="h6 mb-1 text-uppercase text-primary mb-3">Our clients say</p>
         <div class="row mb-5">
@@ -396,57 +403,8 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <footer class="bg-dark">
-      <div class="bg-dark py-5 text-white">
-        <div class="container">
-          <div class="row py-5">
-            <div class="col-lg-4 col-md-6"><img class="mb-4" src="img/logo-white.svg" alt="" width="200">
-              <p class="text-muted text-small mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-              <p class="mb-1"><i class="fas fa-envelope mr-3 text-primary fa-fw"></i><span class="text-small text-muted">rakesh@hcs.harvard.edu</span></p>
-            </div>
-            <div class="col-lg-2 col-md-6">
-              <h5 class="mt-3 mb-4 font-weight-normal">Quick links</h5>
-              <ul class="list-unstyled">
-                <li class="mb-2"><a class="footer-link" href="#">Home</a></li>
-                <li class="mb-2"><a class="footer-link" href="#">About</a></li>
-                <li class="mb-2"><a class="footer-link" href="#">Services</a></li>
-                <li class="mb-2"><a class="footer-link" href="#">Contacts</a></li>
-              </ul>
-            </div>
-            <div class="col-lg-2 col-md-6">
-              <h5 class="mt-3 mb-4 font-weight-normal">Our services</h5>
-              <ul class="list-unstyled">
-                <li class="mb-2"><a class="footer-link" href="#">Make Appointment</a></li>
-                <li class="mb-2"><a class="footer-link" href="#">Customer Services</a></li>
-                <li class="mb-2"><a class="footer-link" href="#">Department Service</a></li>
-                <li class="mb-2"><a class="footer-link" href="#">Our Case Studies</a></li>
-                <li class="mb-2"><a class="footer-link" href="#">Free Consultation</a></li>
-                <li class="mb-2"><a class="footer-link" href="#">Meet Our Experts</a></li>
-              </ul>
-            </div>
-            <div class="col-lg-4 col-md-6">
-              <h5 class="mt-3 mb-4 font-weight-normal">Latest news</h5>
-              <ul class="list-unstyled mb-0">
-                <li class="d-flex mb-4">
-                  <div class="pr-2"><img src="img/blog-thumb-1.jpg" alt="" width="60"></div>
-                  <div class="ml-3">
-                    <p class="small text-muted mb-0">May 01, 2019 </p>
-                    <h6 class="text-light font-weight-normal mb-0">Successful Growth In Business 2018</h6><a class="reset-anchor text-primary text-small" href="#">Read more<i class="fas fa-angle-right ml-2"></i></a>
-                  </div>
-                </li>
-                <li class="d-flex">
-                  <div class="pr-2"><img src="img/blog-thumb-2.jpg" alt="" width="60"></div>
-                  <div class="ml-3">
-                    <p class="small text-muted mb-0">May 01, 2019 </p>
-                    <h6 class="text-light font-weight-normal mb-0">Successful Growth In Business 2018</h6><a class="reset-anchor text-primary text-small" href="#">Read more<i class="fas fa-angle-right ml-2"></i></a>
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
       <div class="bg-darker py-4">
         <div class="container text-center">
           <!-- You are completely free to use this template for your personal use or as a work for your client as long as you keep the link at the template footer pointing to our partner and us.-->
