--- a/about.html
+++ b/about.html
@@ -107,17 +107,17 @@
         </div>
       </div>
     </section> -->
+    <div class="container py-5">
+      <header class="mb-5 text-center">
+        <div class="row">
+          <div class="col-lg-7 mx-auto">
+            <h2>Accelerating Harvard Startups</h2>
+            <p class="text-muted"></p>
+          </div>
+        </div>
+      </header>
     <section class="py-5 bg-light">
       <div class="container py-5">
-        <header class="mb-5 text-center">
-          <div class="row">
-            <div class="col-lg-7 mx-auto">
-              <p class="h6 text-uppercase text-primary">Reliable &amp; Trustworthy</p>
-              <h2>We're looking for specific approach to each cases</h2>
-              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
-            </div>
-          </div>
-        </header>
         <div class="row align-items-stretch">
           <div class="col-lg-4 mb-4 mb-lg-0">
             <div class="bg-white h-100">
@@ -128,7 +128,7 @@
               </div>
               <div class="px-5 pt-0 pb-5 bg-white text-center">
                 <h2 class="h4 mb-3">Our mission</h2>
-                <p class="text-muted text-small mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae, nobis aliquid iusto quibusdam, neque obcaecati delectus. Aliquid veritatis, quo, dignissimos quam magni debitis, minima blanditiis pariatur quae molestiae cumque amet?</p>
+                <p class="text-muted text-small mb-0">Why / When BIP Started</p>
               </div>
             </div>
           </div>
@@ -141,7 +141,7 @@
               </div>
               <div class="px-5 pt-0 pb-5 bg-white text-center">
                 <h2 class="h4 mb-3">Our vision</h2>
-                <p class="text-muted text-small mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis fuga amet necessitatibus. At enim ipsa amet quae autem tempora voluptates, fugit dolorem cum, non praesentium sed neque, hic quasi voluptas?</p>
+                <p class="text-muted text-small mb-0">Future for BIP</p>
               </div>
             </div>
           </div>
@@ -153,8 +153,48 @@
                 </svg>
               </div>
               <div class="px-5 pt-0 pb-5 bg-white text-center">
-                <h2 class="h4 mb-3">Our strategies</h2>
-                <p class="text-muted text-small mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem aperiam, vitae sit voluptatibus, sunt dolore esse. Eaque ullam, delectus illum earum et non quasi commodi in obcaecati qui mollitia a.</p>
+                <h2 class="h4 mb-3">What We Do</h2>
+                <p class="text-muted text-small mb-0">Brief overivew of the summer program + equity-free grants</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <div class="container py-5">
+      <header class="mb-5 text-center">
+        <div class="row">
+          <div class="col-lg-7 mx-auto">
+            <h2>Notable Speakers from previous years</h2>
+          </div>
+        </div>
+      </header>
+
+    <section class="py-5 bg-light">
+      <div class="container py-5">
+        <div class="row align-items-stretch">
+          <div class="col-lg-4 mb-4 mb-lg-0">
+            <div class="bg-white h-100">
+              <div class="px-5 pt-0 pb-5 bg-white text-center">
+                <h2 class="h4 mb-3">Speaker 1</h2>
+                <p class="text-muted text-small mb-0"> pic </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 mb-4 mb-lg-0">
+            <div class="bg-white h-100">
+              <div class="px-5 pt-0 pb-5 bg-white text-center">
+                <h2 class="h4 mb-3">Speaker 2</h2>
+                <p class="text-muted text-small mb-0">pic </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="bg-white h-100">
+              <div class="px-5 pt-0 pb-5 bg-white text-center">
+                <h2 class="h4 mb-3">Speaker 3</h2>
+                <p class="text-muted text-small mb-0">pic</p>
               </div>
             </div>
           </div>
@@ -170,7 +210,7 @@
               <div class="card rounded-0 border-0 mb-1">
                 <div class="card-header p-0 border-0 bg-white rounded-0" id="headingOne">
                   <h6 class="mb-0"><a class="reset-anchor w-100 px-4 py-3 d-block" data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                      What is the procedure to join with your company?
+                      What are the requirements for applying?
                       </a></h6>
                 </div>
                 <div class="collapse show" id="collapseOne" aria-labelledby="headingOne" data-parent="#accordionExample">
@@ -182,7 +222,7 @@
               <div class="card rounded-0 border-0 mb-1">
                 <div class="card-header p-0 border-0 bg-white rounded-0" id="headingTwo">
                   <h6 class="mb-0"><a class="reset-anchor w-100 px-4 py-3 d-block collapsed" data-toggle="collapse" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                      Do you give any offer for premium customer?
+                      What are the program start/end dates?
                       </a></h6>
                 </div>
                 <div class="collapse" id="collapseTwo" aria-labelledby="headingTwo" data-parent="#accordionExample">
@@ -194,7 +234,7 @@
               <div class="card rounded-0 border-0">
                 <div class="card-header p-0 border-0 bg-white rounded-0" id="headingThree">
                   <h6 class="mb-0"><a class="reset-anchor w-100 px-4 py-3 d-block collapsed border-bottom" data-toggle="collapse" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                      What makes you special from others?
+                      When / How do startups receive funding?
                       </a></h6>
                 </div>
                 <div class="collapse" id="collapseThree" aria-labelledby="headingThree" data-parent="#accordionExample">
@@ -240,36 +280,6 @@
       </div>
     </section>
     <footer class="bg-dark">
-      <div class="bg-primary py-5 text-white">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-              <div class="d-flex align-items-center">
-                <h6 class="h1 mb-0">705</h6>
-                <p class="ml-3 flex-grow-1 text-uppercase mb-0">Projects completed</p>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-              <div class="d-flex align-items-center">
-                <h6 class="h1 mb-0">809</h6>
-                <p class="ml-3 flex-grow-1 text-uppercase mb-0">Satisfied customers</p>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-              <div class="d-flex align-items-center">
-                <h6 class="h1 mb-0">354</h6>
-                <p class="ml-3 flex-grow-1 text-uppercase mb-0">Awards recieved</p>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-              <div class="d-flex align-items-center">
-                <h6 class="h1 mb-0">35</h6>
-                <p class="ml-3 flex-grow-1 text-uppercase mb-0">Years of experience</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
       <div class="bg-darker py-4">
         <div class="container text-center">
           <!-- You are completely free to use this template for your personal use or as a work for your client as long as you keep the link at the template footer pointing to our partner and us.-->
