--- a/about.html
+++ b/about.html
@@ -128,7 +128,9 @@
               </div>
               <div class="px-5 pt-0 pb-5 bg-white text-center">
                 <h2 class="h4 mb-3">Our mission</h2>
-                <p class="text-muted text-small mb-0">Why / When BIP Started</p>
+                <p class="text-muted text-small mb-0">
+                  Since its inception, HCS has cultivated a community of passionate young technologists and builders, who are hungry to cultivate the next generation of tech. We hope to encourage experimentation and tinkering alongside giving back to the greater Harvard community. 
+                </p>
               </div>
             </div>
           </div>
@@ -141,7 +143,10 @@
               </div>
               <div class="px-5 pt-0 pb-5 bg-white text-center">
                 <h2 class="h4 mb-3">Our vision</h2>
-                <p class="text-muted text-small mb-0">Future for BIP</p>
+                <p class="text-muted text-small mb-0">
+                  Launched in the summer of 2020, the Builders Incubation Program has been able to help 21 teams realize their vision.
+                  We hope to give teams the resources and mentorship necessary to transform an idea into a startup.
+                </p>
               </div>
             </div>
           </div>
@@ -201,11 +206,11 @@
         </div>
       </div>
     </section>
-    <section class="py-5">
+    <section class="py-5 text-center">
       <div class="container py-5">
         <h2>Frequently asked questions</h2>
         <div class="row">
-          <div class="col-lg-6 mb-5 mb-lg-0">
+          <div class="col-lg-12 mb-5 ">
             <div class="accordion" id="accordionExample">
               <div class="card rounded-0 border-0 mb-1">
                 <div class="card-header p-0 border-0 bg-white rounded-0" id="headingOne">
@@ -215,7 +220,9 @@
                 </div>
                 <div class="collapse show" id="collapseOne" aria-labelledby="headingOne" data-parent="#accordionExample">
                   <div class="card-body">
-                    <p class="text-small text-muted">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch.</p>
+                    <p class="text-small text-muted">
+                      In order to apply for BIP, at least one member of your team must be a current Harvard College student.
+                    </p>
                   </div>
                 </div>
               </div>
@@ -227,19 +234,40 @@
                 </div>
                 <div class="collapse" id="collapseTwo" aria-labelledby="headingTwo" data-parent="#accordionExample">
                   <div class="card-body">
-                    <p class="text-small text-muted">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa.</p>
+                    <p class="text-small text-muted">
+                      The program is 7 weeks long and will start June 22 and end on August 8.
+                    </p>
                   </div>
                 </div>
               </div>
               <div class="card rounded-0 border-0">
                 <div class="card-header p-0 border-0 bg-white rounded-0" id="headingThree">
                   <h6 class="mb-0"><a class="reset-anchor w-100 px-4 py-3 d-block collapsed border-bottom" data-toggle="collapse" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                      When / How do startups receive funding?
+                      How does funding from BIP work?
                       </a></h6>
                 </div>
                 <div class="collapse" id="collapseThree" aria-labelledby="headingThree" data-parent="#accordionExample">
                   <div class="card-body">
-                    <p class="text-small text-muted">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch.</p>
+                    <p class="text-small text-muted">
+                      Students will receive equity free grants that can go towards any project expenses. 
+                      Common expenses include domain and hosting, data storage, app store fees, or marketing costs. 
+                      More funding guidelines can be found <a href="https://docs.google.com/document/d/1VTqchtarGzcBPf5VWxBJlRpu9xSO1EefXI1KvMx6B24/edit?usp=sharing">here</a>.
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="card rounded-0 border-0">
+                <div class="card-header p-0 border-0 bg-white rounded-0" id="headingFour">
+                  <h6 class="mb-0"><a class="reset-anchor w-100 px-4 py-3 d-block collapsed border-bottom" data-toggle="collapse" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                      How do I apply?
+                      </a></h6>
+                </div>
+                <div class="collapse" id="collapseFour" aria-labelledby="headingFour" data-parent="#accordionExample">
+                  <div class="card-body">
+                    <p class="text-small text-muted">
+                      Fill out our application form <a href="https://docs.google.com/forms/d/e/1FAIpQLScM8YYaHCUfUE2aLrftjADLtzIeQ3DShGOFiTXzsVOfvwE2aQ/viewform">here</a>! Applications are due by June 15, 2021 at 11:59 PST.
+                    </p>
                   </div>
                 </div>
               </div>
