--- a/about.html
+++ b/about.html
@@ -166,7 +166,7 @@
       <header class="mb-5 text-center">
         <div class="row">
           <div class="col-lg-7 mx-auto">
-            <h2>Notable Speakers from previous years</h2>
+            <h2>Notable Speakers</h2>
           </div>
         </div>
       </header>
@@ -177,24 +177,27 @@
           <div class="col-lg-4 mb-4 mb-lg-0">
             <div class="bg-white h-100">
               <div class="px-5 pt-0 pb-5 bg-white text-center">
-                <h2 class="h4 mb-3">Speaker 1</h2>
-                <p class="text-muted text-small mb-0"> pic </p>
+                <h2 class="h4 mb-3">Michael Seibel</h2>
+                <p style="color:rgb(219, 47, 47)"> Managing Director at YC</p>
+                <img src="seibel.png" alt="seibel" width="200" height="200">
               </div>
             </div>
           </div>
           <div class="col-lg-4 mb-4 mb-lg-0">
             <div class="bg-white h-100">
               <div class="px-5 pt-0 pb-5 bg-white text-center">
-                <h2 class="h4 mb-3">Speaker 2</h2>
-                <p class="text-muted text-small mb-0">pic </p>
+                <h2 class="h4 mb-3">Ali Partovi</h2>
+                <p style="color:rgb(219, 47, 47)"> Co-founder of Code.org </p>
+                <img src="ali.jpg" alt="partovi" width="200" height="200">
               </div>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="bg-white h-100">
               <div class="px-5 pt-0 pb-5 bg-white text-center">
-                <h2 class="h4 mb-3">Speaker 3</h2>
-                <p class="text-muted text-small mb-0">pic</p>
+                <h2 class="h4 mb-3">Baris Akis</h2>
+                <p style="color:rgb(219, 47, 47)"> President of Human Capital</p>
+                <img src="baris.jpeg" alt="akis" width="200" height="200">
               </div>
             </div>
           </div>
